added views
